--- a/.env
+++ b/.env
@@ -3,6 +3,11 @@ DB_HOST=localhost
 DB_USER=root
 DB_NAME=procedimiento
 DB_PASS=
+
+#DB_USER=danielh1_pro
+#DB_NAME=danielh1_pro
+#DB_PASS=CGZL%iR$E1ET
+
 # Set the database type to be used. Available values are "mysql", "pgsql", "sqlite" and "sqlserver".
 DB_TYPE=mysql
 
